<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LUSIS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Store Clerk</string>
    <string name="title_activity_retrieval">Retrieval List</string>
    <string name="title_activity_retrieval_break_down">Retrieval Detail</string>
    <string name="title_activity_disbursement">Disbursement List</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_raise_voucher">Raise Adjustment Voucher</string>
    <string name="title_activity_view_voucher">Voucher List</string>
    <string name="title_activity_approve_po">Approve Purchase Order List</string>
    <string name="title_activity_view_po">ViewPOActivity</string>
    <string name="title_activity_approve_voucher">ApproveVoucherActivity</string>
    <string name="login_label_credentials">Please enter your credentials</string>
    <string name="login_label_emp_id">Employee ID:</string>
    <string name="login_label_pwd">Password:</string>
    <string name="login_label_btn">Login</string>
    <string name="title_activity_new_requisition">NewRequisitionActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="title_activity_employee_main">Employee</string>
    <string name="employee_main_new_requisition">New Requisition</string>
    <string name="employee_main_view_requisition">View Requisition</string>
    <string name="title_activity_new_requisition_search">New Requisition</string>
    <string name="search_button_label">Search</string>
    <string name="goto_cart_btn_label">Go to Cart</string>
    <string name="title_activity_new_requisition_single_item">Item</string>
    <string name="title_activity_dept_head_main">Dept. Head</string>
    <string name="title_activity_view_requisition">View Requisitions</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_change_department_details">Dept. Details</string>
    <string name="title_activity_choose_employee_list_view">Choose Employee</string>
    <string name="title_activity_set_delegate">Delegate Authority</string>
    <string name="title_generate_retrieval_list">Generate Retrieval List</string>
    <string name="title_view_retireval_list">View Retrieval List</string>
    <string name="title_disbursement_list">Disbursement List</string>
    <string name="title_raise_adj_voucher">Raise Adjustment Voucher</string>
    <string name="title_view_adj_voucher">View Adjustment Voucher</string>
    <string name="title_ritem_desc">Description</string>
    <string name="break_down_by_dept">break down by dept</string>
    <string name="title_activity_mdisbursement">Disbursement</string>
    <string name="title_activity_rdepartment_breakdown">Department Break Down</string>
    <string name="title_activity_employee_view_requisition">Requisitions</string>
    <string name="title_activity_dept_head_approve_requisition">Approve Requisitions</string>
    <string name="title_activity_rdepartmentbreakdown_detail">Detial</string>
    <string name="title_activity_employee_cart">EmployeeCartActivity</string>
    <string name="title_r_retrieval_list">Retrieval List</string>
    <string name="title_r_binNo">Bin No.</string>
    <string name="title_r_itemDesc">Item Description</string>
    <string name="title_r_itemNeeded"></string>
    <string name="title_r_retrieved">Item retrieved</string>
    <string name="action_title_r_finalize">Finalize</string>
    <string name="label_collection_point">Collection Point</string>
    <string name="label_representative">Representative</string>
    <string name="label_available_collection_points">Available Collection Ponits</string>
    <string name="label_search_using_keyword">Enter a keyword to search for Stationery Items</string>
    <string name="label_search_using_keyword_2">(or leave blank to list all items)</string>
    <string name="label_employee">Employee</string>
    <string name="label_date">Date</string>
    <string name="label_item">Item</string>
    <string name="label_enter_qty">Please enter quantity required:</string>
    <string name="label_dept_head_main_change_dept">Change Dept. Details</string>
    <string name="label_dept_head_delegate_authority">Delegate Authority</string>
    <string name="label_dept_head_approve_requisition">Approve Requisitions</string>
    <string name="label_delegate">Delegate:</string>
    <string name="label_start_date">Start Date:</string>
    <string name="label_end_date">End Date:</string>
    <string name="button_set_date">Set Date</string>
    <string name="label_date_submitted">Submission Date:</string>
    <string name="label_comments">Comments:</string>
    <string name="label_status">Status:</string>
    <string name="add_more_items_btn_label">Add more items</string>
    <string name="clear_delegate">Clear</string>
    <string name="no_end_date">No End Date</string>
    <string name="view_voucher_date">Date</string>
    <string name="view_voucher_approval_by">Approved By</string>
    <string name="view_voucher_raised_by">Raised By</string>
    <string name="view_voucher_voucher_num">Voucher #</string>
    <string name="view_voucher_status">Status</string>

    <!-- Do Not put colons here -->
    <string name="label_cancel">Cancel</string>
    <string name="label_submit">Submit</string>
    <string name="label_save">Save</string>
    <string name="label_approve">Approve</string>
    <string name="label_reject">Reject</string>
    <string name="label_logout">Logout</string>
    <string name="label_ok">OK</string>
    <string name="label_done">Done</string>
    <string name="title_disb_confirmation_password">Password ...</string>
    <string name="title_activity_supervisor_menu">SupervisorMenuActivity</string>
    <string name="title_approve_po">Approve Purchase Order</string>
    <string name="title_approve_adj_voucher">Approve Adjustment Voucher</string>
    <string name="title_activity_approve_purchase_order">ApprovePurchaseOrder</string>
    <string name="title_activity_approve_purchase_order_detail">ApprovePurchaseOrderDetail</string>
    <string name="id_stitle_retrieval_bin">Bin</string>
    <string name="id_stitle_retrieval_itemdesc">Description</string>
    <string name="id_stitle_retrieval_avaliability">Avaliability</string>
    <string name="id_stitle_retrieval_required">Required</string>
    <string name="id_stitle_retrieval_retrieved">Retrieved</string>
    <string name="id_stitle_retrieval_by_department">Breakdown by Departments</string>
    <string name="title_activity_store_clerk_menu">StoreClerkMenuActivity</string>
    <string name="action_title_r_save">Save</string>

</resources>
