<ScrollView
        xmlns:tools="http://schemas.android.com/tools"
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context="sg.edu.nus.iss.mobilelusis.MenuActivity$PlaceholderFragment" >
        
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="690dp"
        android:layout_marginBottom="100dp" >

        <Button
            android:id="@+id/btn_generate_retireval_list"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="100dp"
            android:text="@string/title_generate_retrieval_list"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_view_retireval_list"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btn_generate_retireval_list"
            android:text="@string/title_view_retireval_list"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_disbursement_list"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btn_view_retireval_list"
            android:text="@string/title_disbursement_list"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_raise_adj_voucher"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_raise_adj_voucher"
            android:layout_below="@+id/btn_disbursement_list"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_view_adj_voucher"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btn_raise_adj_voucher"
            android:text="@string/title_view_adj_voucher"
            android:textAppearance="?android:attr/textAppearanceLarge" />
	</RelativeLayout>   
 </ScrollView>
