<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sg.edu.nus.iss.mobilelusis.store.ViewVoucherActivity" >
    
    <TextView
        android:id="@+id/list_req_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    

    <TableRow
        android:id="@+id/id_table_d_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_req_name"
        android:background="#CCCCCC"
        android:padding="10dp" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/view_voucher_voucher_num"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/view_voucher_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/view_voucher_approve_or_raise_heading"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/view_voucher_approval_by"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_voucher_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <ListView
        android:id="@+id/id_listview_viewVouher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/id_table_d_row1" >
    </ListView>

    
</RelativeLayout>