<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.iss.mobilelusis.LoginActivity" >

    <TextView
        android:id="@+id/msg_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_label_credentials"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/emp_id_textfield"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emp_id_label"
        android:layout_alignBottom="@+id/emp_id_label"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/emp_id_label"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/pwd_tf"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pwd_label"
        android:layout_alignLeft="@+id/emp_id_textfield"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/emp_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/msg_label"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="43dp"
        android:text="@string/login_label_emp_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pwd_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emp_id_textfield"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/emp_id_textfield"
        android:text="@string/login_label_pwd"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pwd_tf"
        android:layout_below="@+id/pwd_tf"
        android:layout_marginTop="15dp"
        android:text="@string/login_label_btn" />

</RelativeLayout>