<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.iss.mobilelusis.dept.activity.DeptHeadMainActivity" >

    <TextView
        android:id="@+id/dept_head_change_dept_details_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dept_head_approve_req_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/label_dept_head_main_change_dept"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dept_head_set_delegate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dept_head_change_dept_details_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/label_dept_head_delegate_authority"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dept_head_approve_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dept_head_change_dept_details_btn"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:text="@string/label_dept_head_approve_requisition"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
