<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.iss.mobilelusis.dept.activity.SetDelegateActivity" >

<TextView
        android:id="@+id/approve_req_emp_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_desc_textview"
        android:layout_below="@+id/item_desc_textview"
        android:layout_marginTop="28dp"
        android:text="@string/label_start_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
<TextView
        android:id="@+id/collection_point_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/item_desc_textview"
        android:layout_below="@+id/approve_req_emp_textview"
        android:layout_marginTop="23dp"
        android:text="@string/label_end_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<TextView
    android:id="@+id/item_desc_textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="69dp"
    android:layout_marginTop="61dp"
    android:text="@string/label_delegate"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<TextView
    android:id="@+id/start_date_textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/approve_req_emp_textview"
    android:layout_alignBottom="@+id/approve_req_emp_textview"
    android:layout_marginLeft="116dp"
    android:layout_toRightOf="@+id/approve_req_emp_textview"
    android:text="Start Date Place Holder"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<TextView
    android:id="@+id/delegate_textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/approve_req_emp_textview"
    android:layout_alignLeft="@+id/start_date_textview"
    android:text="Delegate Place Holder"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<TextView
    android:id="@+id/end_date_textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/collection_point_textview"
    android:layout_alignBottom="@+id/collection_point_textview"
    android:layout_alignLeft="@+id/start_date_textview"
    android:text="End Date Place Holder"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<DatePicker
    android:id="@+id/datePicker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/collection_point_textview"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="68dp" />

<Button
    android:id="@+id/set_date_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/end_date_textview"
    android:layout_below="@+id/datePicker"
    android:layout_marginRight="40dp"
    android:layout_marginTop="39dp"
    android:text="@string/label_ok" />

<Button
    android:id="@+id/clear_end_date_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/set_date_btn"
    android:layout_alignBottom="@+id/set_date_btn"
    android:layout_marginLeft="15dp"
    android:layout_toRightOf="@+id/approve_req_emp_textview"
    android:text="@string/no_end_date" />

</RelativeLayout>
