<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.iss.mobilelusis.dept.activity.NewRequisitionSearchActivity" >

    <ListView
        android:id="@+id/search_results_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" >
    </ListView>

    <TextView
        android:id="@+id/list_req_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_textview"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:text="@string/label_search_using_keyword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/search_results_listview"
        android:layout_alignTop="@+id/search_textview"
        android:text="@string/search_button_label" />

    <EditText
        android:id="@+id/search_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_results_listview"
        android:layout_below="@+id/list_req_name"
        android:layout_marginTop="45dp"
        android:layout_toLeftOf="@+id/search_button"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/list_req_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/list_req_name"
        android:layout_below="@+id/list_req_name"
        android:text="@string/label_search_using_keyword_2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
