<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.iss.mobilelusis.dept.activity.ChangeDepartmentDetailsActivity" >

    <TextView
        android:id="@+id/approve_req_emp_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_desc_textview"
        android:layout_below="@+id/item_desc_textview"
        android:layout_marginTop="41dp"
        android:text="@string/label_collection_point"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/select_dept_details_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_req_name" >

    </ListView>

    <TextView
        android:id="@+id/item_desc_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_dept_details_listview"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:text="@string/label_representative"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/collection_point_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/approve_req_emp_textview"
        android:layout_alignBottom="@+id/approve_req_emp_textview"
        android:layout_alignLeft="@+id/rep_textview"
        android:layout_alignRight="@+id/select_dept_details_listview"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/list_req_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collection_point_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/label_available_collection_points"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/rep_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/approve_req_emp_textview"
        android:layout_alignLeft="@+id/list_req_name"
        android:layout_alignRight="@+id/select_dept_details_listview"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>