<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.iss.mobilelusis.DeptHeadApproveRequisitionActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/approve_req_emp_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_desc_textview"
        android:layout_alignLeft="@+id/approve_req_emp_comments_textview"
        android:layout_alignRight="@+id/id_listview_disb_itemRequestedList"
        android:text="Placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/change_dept_details_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_desc_textview"
        android:layout_below="@+id/item_desc_textview"
        android:layout_marginTop="29dp"
        android:text="@string/label_date_submitted"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/approve_req_date_submitted_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/change_dept_details_date_textview"
        android:layout_alignBottom="@+id/change_dept_details_date_textview"
        android:layout_alignLeft="@+id/approve_req_emp_textview"
        android:layout_alignRight="@+id/id_listview_disb_itemRequestedList"
        android:text="Placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/id_listview_disb_itemRequestedList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/approve_req_emp_comments_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" >
    </ListView>

    <TextView
        android:id="@+id/new_req_single_unit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/change_dept_details_date_textview"
        android:layout_below="@+id/change_dept_details_date_textview"
        android:layout_marginTop="30dp"
        android:text="@string/label_comments"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/item_desc_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_listview_disb_itemRequestedList"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/label_employee"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/approve_req_emp_comments_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/new_req_single_unit_label"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textMultiLine" />
    
</RelativeLayout>